<resources>
    <string name="app_name">Saxa Pokedex</string>
    <string name="alan_is_cool">Alan is Cool</string>
    <string name="pokedex">Pokedex</string>
    <string name="stat_hp">HP</string>
    <string name="stat_attack">Attack</string>
    <string name="stat_defense">Defense</string>
    <string name="stat_special_attack">Sp. Atk</string>
    <string name="stat_special_defense">Sp. Def</string>
    <string name="stat_speed">Speed</string>
    <string name="stat_total">Total</string>
    <string name="lorum_pokemon_description">Bulbasaur can be seen napping in bright sunlight. There is a seed on its back. By soaking up the sun’s rays, the seed grows progressively larger.</string>
    <string name="lorum_pokemon_height">2\'3.6\" (0.7cm)</string>
    <string name="lorum_pokemon_weight">13.2 lbs (6.9kg)</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="breeding">Breeding</string>
    <string name="egg_group">Egg Group</string>
    <string name="gender">Gender</string>
    <string name="fetching_data">Fetching Data...</string>
    <string name="type_defenses">Type Defenses</string>

</resources>
