<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="description"
            type="String" />

        <variable
            name="percentMale"
            type="String" />

        <variable
        name="percentFemale"
        type="String" />

        <variable
            name="height"
            type="String" />

        <variable
            name="weight"
            type="String" />

        <variable
            name="eggGroup"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/pokemonDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:lineSpacingExtra="4sp"
            android:text="@{description}"

            android:textColor="@color/text"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/lorum_pokemon_description" />

        <androidx.cardview.widget.CardView
            android:id="@+id/pokemonHeightWeight"
            app:layout_constraintTop_toBottomOf="@id/pokemonDescription"
            app:layout_constraintStart_toStartOf="@id/pokemonDescription"
            app:layout_constraintEnd_toEndOf="@id/pokemonDescription"

            android:layout_marginTop="30dp"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardElevation="12dp"
            app:cardCornerRadius="12dp"
            >

            <LinearLayout
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:text="@string/height"
                        android:textColor="@color/textGray"
                        />

                    <TextView
                        android:textColor="@color/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{height}"
                        tools:text="@string/lorum_pokemon_height"
                        android:textStyle="bold"

                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:text="@string/weight"
                        android:textColor="@color/textGray"
                        />

                    <TextView
                        android:textColor="@color/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{weight}"
                        tools:text="@string/lorum_pokemon_weight"
                        android:textStyle="bold"
                        />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

<!--        breeding-->
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"

            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/pokemonHeightWeight"
            app:layout_constraintStart_toStartOf="@id/pokemonHeightWeight"
            app:layout_constraintTop_toBottomOf="@id/pokemonHeightWeight">

            <TextView
                style="@style/detail_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/breeding" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/textGray" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="6dp"
                    android:src="@drawable/ic_male" />

                <TextView
                    android:id="@+id/pokemonGenderMaleRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@{percentMale}"
                    android:textColor="@color/text"
                    android:textStyle="bold"
                    tools:text="87.5%" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_female" />

                <TextView
                    android:id="@+id/pokemonGenderFemaleRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{percentFemale}"
                    android:textColor="@color/text"
                    android:textStyle="bold"
                    tools:text="12.5%" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/egg_group"
                    android:textColor="@color/textGray" />

                <TextView
                    android:id="@+id/pokemonEggGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@{eggGroup}"
                    tools:text="Monster, Plant"
                    android:textColor="@color/text"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            tools:visibility="gone"
            android:visibility="gone"
            android:id="@id/loader"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="1"
            android:background="@color/white"
            android:orientation="vertical"
            android:elevation="80dp"
            android:gravity="center_horizontal"

            >

            <ImageView
                android:id="@+id/poke_shadow"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="20dp"

                android:layout_width="170dp"
                android:layout_height="170dp"
                android:src="@drawable/ic_poke_shadow"
                />

            <ProgressBar
                app:layout_constraintTop_toTopOf="@id/poke_shadow"
                app:layout_constraintLeft_toLeftOf="@id/poke_shadow"
                app:layout_constraintRight_toRightOf="@id/poke_shadow"


                android:elevation="120dp"
                android:id="@+id/progressBar"
                style="@android:style/Widget.Holo.ProgressBar.Large"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="30dp"
                />

            <TextView
                app:layout_constraintTop_toBottomOf="@id/poke_shadow"
                app:layout_constraintLeft_toLeftOf="@id/poke_shadow"
                app:layout_constraintRight_toRightOf="@id/poke_shadow"


                android:layout_marginTop="15dp"
                android:textColor="@color/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fetching_data"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>